--- a/Untitled9.ipynb
+++ b/Untitled9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOw0iU8EVhfs/vLAIkq4QTi",
+      "authorship_tag": "ABX9TyOGp5WALDymSojneSRfT3lt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,23 +28,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "hr-gxLNwFHms"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j4DFQrhvNsl5",
+        "outputId": "b355d8c8-4004-448b-80ef-8bfedd2e8e0c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "survived         0\n",
+            "pclass           0\n",
+            "sex              0\n",
+            "age            177\n",
+            "sibsp            0\n",
+            "parch            0\n",
+            "fare             0\n",
+            "embarked         2\n",
+            "class            0\n",
+            "who              0\n",
+            "adult_male       0\n",
+            "deck           688\n",
+            "embark_town      2\n",
+            "alive            0\n",
+            "alone            0\n",
+            "dtype: int64\n"
+          ]
+        }
+      ],
       "source": [
-        "high_std=[400,1000,23,827,123]\n",
-        "low_std=[430,423,433,431]"
+        "import seaborn\n",
+        "import pandas\n",
+        "titanic=seaborn.load_dataset('titanic')\n",
+        "missing= titanic.isnull().sum()\n",
+        "print(missing)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "A data with a high standard deviation has values that are highly spread out. The high standard deviation data, has a more spread out data. Which ranges from 23 upto 1000. whereas the low standard deviation data ranges between 423 upto 433 with closer values."
-      ],
+      "source": [],
       "metadata": {
-        "id": "Z4t2bpX1F-sw"
+        "id": "60PXQyfqNtLI"
       }
     }
   ]
